Fixed too small bottom padding

--- a/public/stylesheets/template.css
+++ b/public/stylesheets/template.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 75px;
 }
 
 .starter-template {
